<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_common"
    >


    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/nmedia"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_common"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"

        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_common"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconOnlyEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_common"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content, attachmentPicture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeSign"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_baseline_like_selector"
        android:checkable="true"
        android:contentDescription="@string/description_post_likes"
        android:src="@drawable/ic_baseline_like_selector"
        app:layout_constraintEnd_toStartOf="@id/shareSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_editor_absoluteX="16dp" />

    <!--    <TextView-->
    <!--        android:id="@+id/likesCount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        tools:text="80"-->
    <!--        android:layout_marginStart="@dimen/gap_common"-->
    <!--        android:layout_marginTop="@dimen/padding_common"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/barrierBottom"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/like"-->
    <!--        />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareSign"
        style="@style/Widget.AppTheme.StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_common"
        android:contentDescription="@string/description_post_share"
        app:layout_constraintStart_toEndOf="@+id/likeSign"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:icon="@drawable/ic_baseline_share_24" />

    <!--    <TextView-->
    <!--        android:id="@+id/shareCount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="8"-->
    <!--        android:layout_marginStart="@dimen/gap_common"-->
    <!--        android:layout_marginTop="@dimen/padding_common"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/barrierBottom"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/share"-->
    <!--        />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsSign"
        style="@style/Widget.AppTheme.IconOnlyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gap_common"
        android:checkable="false"
        android:clickable="false"
        android:contentDescription="@string/description_post_views"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:icon="@drawable/ic_baseline_views_24" />

    <!--    <TextView-->
    <!--        android:id="@+id/viewsCount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="888"-->
    <!--        android:layout_marginStart="@dimen/gap_common"-->
    <!--        android:layout_marginTop="@dimen/padding_common"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/barrierBottom"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        />-->

<!--    <androidx.constraintlayout.widget.Group-->
<!--        android:id="@+id/videoGroup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:visibility="gone"-->
<!--        app:constraint_referenced_ids="videoPicture,videoButton" />-->


    <ImageButton
        android:id="@+id/attachmentPicture"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/attached_content"
        android:src="@drawable/ic_baseline_video_preview"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoButton"
        style="@style/Widget.AppTheme.VideoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/video_play_button"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_video_play_button"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="@id/attachmentPicture"
        app:layout_constraintEnd_toEndOf="@id/attachmentPicture"
        app:layout_constraintStart_toStartOf="@id/attachmentPicture"
        app:layout_constraintTop_toTopOf="@id/attachmentPicture" />

</androidx.constraintlayout.widget.ConstraintLayout>